Now also updating the voter table when not forging blocks or no blocks need to be forged to keep the details stats page up to date even when not forging Updated error in invalid voter count retrieval

--- a/src/LiskPoolBundle/Resources/views/Default/index.html.twig
+++ b/src/LiskPoolBundle/Resources/views/Default/index.html.twig
@@ -13,8 +13,14 @@
                 nodes on the Lisk mainnet and one node on the Lisk testnet. We are also actively developing some tools for the community, together we can make Lisk awesome.
                 Three projects that we are currently working on are:
                 <ul>
-                    <li>An open source Lisk wrapper for the official Lisk API, written in PHP + Symfony 3.3. <a target="_blank" href="https://www.github.com/goforlisk/lisk-php">View it on Github</a></li>.
-                    <li>An open source tool to run a Lisk pool, written in PHP + Symfony 3.3. This is the software you are looking at right now.</li> <a target="_blank" href="https://www.github.com/goforlisk/liskpool">View it on Github</a></li>.
+                    <li>
+                        An open source Lisk wrapper for the official Lisk API, written in PHP + Symfony 3.3.<br />
+                        <a target="_blank" href="https://www.github.com/goforlisk/lisk-php">See it on Github</a>.
+                    </li>
+                    <li>
+                        An open source tool to run a Lisk pool, written in PHP + Symfony 3.3. This is the software you are looking at right now.<br />
+                        <a target="_blank" href="https://www.github.com/goforlisk/liskpool">See it on Github</a>.
+                    </li>
                     <li>An open source tool to calculate possible earnings by voting, written in PHP + Symfony 3.3. (Work In Progress)</li>
                     <li>An open source tool to gather and display network statistics. (Work In Progress)</li>
                 </ul>
