--- a/src/LiskPoolBundle/Resources/views/Statistics/includes/delegate.html.twig
+++ b/src/LiskPoolBundle/Resources/views/Statistics/includes/delegate.html.twig
@@ -15,7 +15,7 @@
                     <strong>Approval:</strong> {{ delegate.approval }}%
                 </li>
                 <li class="list-group-item">
-                    <strong>Votes:</strong> {{ delegate.vote }}
+                    <strong>Votes:</strong> {{ voteCount }}
                 </li>
                 <li class="list-group-item">
                     <strong>Productivity:</strong> {{ delegate.productivity }}%
