Bugfix in database voter <> payout relations Minor improvements

--- a/src/LiskPoolBundle/Resources/views/Network/index.html.twig
+++ b/src/LiskPoolBundle/Resources/views/Network/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Lisk node statistics{% endblock %}
 {% block body %}
     <div class="container my-5">
         <div class="row">
