--- a/src/LiskPoolBundle/Resources/views/Statistics/detailed.html.twig
+++ b/src/LiskPoolBundle/Resources/views/Statistics/detailed.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}detailed delegate information{% endblock %}
+
 {% block body %}
     <div class="container my-5">
         {% include "LiskPoolBundle::Statistics/includes/delegate.html.twig" with { 'voteCount': voters | length } %}
