--- a/src/LiskPoolBundle/Resources/views/Default/index.html.twig
+++ b/src/LiskPoolBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}home{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="jumbotron my-5">
