--- a/src/LiskPoolBundle/Resources/views/Search/index.html.twig
+++ b/src/LiskPoolBundle/Resources/views/Search/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}search voter{% endblock %}
 {% block body %}
     <div class="container">
         {% if voter %}
