Added a Rewards Calculator

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,9 +7,22 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
+        <!-- Protip CSS -->
+        <link rel="stylesheet" href="//min.gitcdn.xyz/repo/wintercounter/Protip/master/protip.min.css">
+
         <title>goforlisk lisk pool - 85% + 5% reward sharing - {% block title %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109677176-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-109677176-1');
+        </script>
     </head>
     <body>
 
@@ -25,7 +38,10 @@
                             <a class="nav-link" href="{{ path('home') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('statistics') }}">Delegate stats</a>
+                            <a class="nav-link" href="{{ path('rewards_calculator') }}">Rewards calculator</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('statistics') }}">Pool stats</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('network_statistics') }}">Node stats</a>
@@ -38,16 +54,34 @@
                         <input class="form-control mr-sm-2 {% if address_error is defined and address_error == true %}is-invalid{% endif %}" type="text" name="address" placeholder="Enter your Lisk address" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">View stats</button>
                     </form>
+                    <button id="clickMe">Click me</button>
                 </div>
             </div>
         </nav>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+            <!-- Font awesome JS -->
+            <script src="https://use.fontawesome.com/18449e28bb.js"></script>
+            <!-- Protip JS -->
+            <script src="//min.gitcdn.xyz/repo/wintercounter/Protip/master/protip.min.js"></script>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+            <script type="text/javascript">
+                $(function () {
+                    $.protip();
+                });
+
+                $('.liskVote').click(function(){
+                    var unvote = $(this).data("unvote");
+                    var vote = $(this).data("vote");
+                    window.location.href = 'lisk://main/voting/vote?unvotes=' + unvote + '&votes=' + vote;
+                });
+            </script>
+        {% endblock %}
+
     </body>
 </html>
